# template_django_rest_postgres

./: .envexample  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py  views.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: paginators.py  permissions.py  throttle.py
